--- a/css/manageusers.css
+++ b/css/manageusers.css
@@ -1,181 +1,503 @@
-*{
+/* header */
 
-  font-style: "helvetica neue", helvetica, tahoma, sans-serif;
-
+header {
+  overflow: hidden;
+  background-color: #004581;
 }
 
-
-.booked-packages-list{
-  margin-top: 20px;
-}
-
-
-body{
-  background-color: #beebff;
-
-  background-repeat: no-repeat;
-  background-size: cover;
-  font-family: 'Arvo', serif;
-  font-family: 'Days One', sans-serif;
-}
-
-.add{
-  display: inline;
-  margin-top: 1%;
-}
-.add>h3{
-  color: #022535 ;
-}
-
-.add>a{
-  background-color: #ffffff;
-  float: right;
-  
-  margin-right: 2%;
-  margin-bottom: 10px;
-  height: 24px;
-  padding: 5px 10px;
-  color: #0789c6;
-  border-radius: 10px;
+header a {
+  float: left;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 5px;
   text-decoration: none;
- 
+  font-size: 15px;
+  line-height: 25px;
+  border-radius: 4px;
+  font-family: sans-serif;
+  font-weight: bold;
 }
 
-.booked-packages{
-  margin-top: 1%;
-
-  
-  border-left: 3px solid black;
-  padding-left: 20px;
+header a.logo {
+  font-size: 25px;
+  font-weight: bold;
 }
 
-.booked-packages>h3{
+/* header a:hover {
+  background-color: #ddd;
+  color: black;
+} */
+
+header a.active {
+  background-color: rgb(255, 255, 255);
   color: white;
-  font-family: 'Arvo', serif;
-  font-family: 'Days One', sans-serif;
 }
 
-.booked-packages-list{
-  margin-left: 2%;
-  margin-top: 1%;
+.header-right {
+  float: right;
+  margin-top: 16px;
+  padding-right: 30px;
 }
-
-.booked-packages-list>.booked-packages-card{
-  background-color: #1c1f37c9;
-  display: flex;
+/* 
+@media screen and (max-width: 750px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
   
-  color: white;
-  padding: 5px 5px;
-  width:90%;
-  height: 50px ;
+  .header-right {
+    float: none;
+  }
+} */
+
+span.b {
+  display: inline-block;
+  width: 300px;
+  height: 225px;
+  padding: 5px;
+  border: 1px solid rgba(37, 53, 81, 1);
+  background-color: white;
+  margin-top: 10px;
+}
+span.c {
+  display: inline-block;
+  width: 530px;
+  height: 400px;
+  padding: 5px;
+  border: 1px solid rgba(37, 53, 81, 1);
+  background-color: rgba(37, 53, 81, 1);
   margin-bottom: 10px;
-  border-radius: 18.2357px;
-  
+}
+.dashheading {
+  font-style: "helvetica neue", helvetica, tahoma, sans-serif;
+  color: rgba(37, 53, 81, 1);
+  font-weight: bold;
+  font-size: 17px;
+  text-align: center;
 }
 
-.booked-packages-list>.booked-packages-card>a > img{
-  width: 70px;
-  height: 46px;
-  border-radius: 18.46px;
-  margin-top:-4px;
+.chart 
+{
+  font-style: "helvetica neue", helvetica, tahoma, sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  font-size: 17px;
+  text-align: center;
 }
 
-.booked-packages-list>.booked-packages-card>.details{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: 11%;
-  margin-top: -20px;
+/* pkg */
+
+body {
+  background-color: #dde8f0;
+  margin: 0;
+  padding: 0;
+}
+.registerForm {
+  background-color: rgb(255, 255, 255);
+  width: 885px;
+  padding: 60px;
+  margin-left: 210px;
+  margin-top: 20px;
+  display: table;
+  margin-bottom: 30px;
+  /* height: 200px; */
+}
+.heading {
+  font-style: "helvetica neue", helvetica, tahoma, sans-serif;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  font-size: 27px;
+  padding: 10px;
+  text-align: center;
+}
+.subheading {
+  font-style: "helvetica neue", helvetica, tahoma, sans-serif;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  font-size: 20px;
+}
+.content {
+  font-style: "helvetica neue", helvetica, tahoma, sans-serif;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  font-size: 15px;
+  margin-top: 25px;
+}
+.field {
+  font-family: sans-serif;
+  background: #dde8f0;
+  width: 95%;
+  height: 30px;
+  margin: 5px 0 15px;
+  padding: 10px;
+  box-sizing: border-box;
+  font-size: 14px;
+  border: 2px solid rgba(34, 50, 194, 0.25);
+  border-radius: 10px;
+}
+.field:hover,
+.field:focus {
+  outline: none;
+  border: 3px solid rgba(1, 6, 56, 0.25);
+}
+.form button:hover,
+.form button:active,
+.form button:focus {
+  background: #4169e1;
+}
+.subfield {
+  font-family: sans-serif;
+  background: #dde8f0;
+  width: 90%;
+  height: 30px;
+  margin: 10px 0 0;
+  padding: 5px;
+  box-sizing: border-box;
+  font-size: 14px;
+  border: 2px solid rgba(34, 50, 194, 0.25);
+  border-radius: 10px;
+}
+.subtextfield {
+  font-family: sans-serif;
+  background: #dde8f0;
+  width: 90%;
+  margin: 10px 0 0;
+  padding: 5px;
+  box-sizing: border-box;
+  font-size: 14px;
+  border: 2px solid rgba(34, 50, 194, 0.25);
+  border-radius: 10px;
+  resize: none;
+}
+.subfield:hover,
+.subfield:focus {
+  outline: none;
+  border: 3px solid rgba(1, 6, 56, 0.25);
+}
+.subtextfield:hover,
+.subtextfield:focus {
+  outline: none;
+  border: 3px solid rgba(1, 6, 56, 0.25);
+}
+
+table {
+  width: 100%;
+  margin: 0px;
 }
 
 
-
-.active{
+.btnRegister {
+  background-color: #004581;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 30px 2px;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 100%;
+}
+.btn1 {
   background-color: #0789c6;
+  border: none;
   color: white;
+  padding: 10px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 35px 360px;
+  cursor: pointer;
+  border-radius: 5px;
+  width: 15%;
+}
+
+/* .bg {
+  height: auto;
+  width: 100%;
+  background-color: white;
+  padding: 10px;
+  margin-left: 10px;
+  margin-top: 25px;
+  display: table;
+} */
+.bg{
+    border-radius: 0.5rem;
+    margin: 2vw 1vw;
+    padding: 0.2vh 1vw;
+    background-color: white;
+    box-shadow: 0 1px 10px 0 rgb(255, 255, 255);
+    grid-area: search;
+}
+.se{
+    border-radius: 0.5rem;
+    margin: 2vw 1vw;
+    padding: 0.2vh 1vw;
+    grid-area: search;
+}
+.tblh {
+  background-color: white;
+  text-align: left;
+  padding: 10px;
+   border-bottom: 1px solid #ddd;
+}
+
+.tbld {
+  padding: 10px;
+   border-bottom: 1px solid #ddd;
+}
+/* th, td{
+    border-bottom: 1px solid #ddd;
+} */
+.status1 {
+  background-color: rgb(121, 9, 9);
+  padding: 10px;
+  border-radius: 20px;
+  color: white;
+}
+.status2 {
+  background-color: rgb(17, 88, 17);
+  padding: 10px;
+  border-radius: 20px;
+  color: white;
+}
+.art {
+  font-size: 17px;
+  color: rgb(0, 0, 0);
+}
+i {
   cursor: pointer;
 }
-
-.booked-packages-list>.booked-packages-card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
+#search {
+  background-image: url('../images/search.png');
+  background-position: 10px 7px;
+  background-size: 28px;
+  background-repeat: no-repeat;
+  width: 97%;
+  font-size: 15px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
 }
 
+#myUL {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
 
+#myUL li a {
+  border: 1px solid #ddd;
+  margin-top: -1px; /* Prevent double borders */
+  background-color: #f6f6f6;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  display: block
+}
 
-.btn{
+#myUL li a:hover:not(.header) {
+  background-color: #eee;
+}
+
+.chartimg{
+  margin-top:20px;
+  margin-right:20px;
+  padding:10px;
+}
+
+/* profile */
+.wrapper{
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%,-50%); 
+   width: 1000px;
+   height: 400px;
+   display: flex;
+   box-shadow: 0 1px 20px 0 white;
+}
+.wrapper .left{
+    width: 35%;
+    background:#76b6c4;
+    padding:30px 25px ;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    text-align: center;
+    color:black;
+}
+.wrapper .left img{
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+.wrapper .left h3{
+    margin-bottom: 10px;
+}
+.wrapper .left p{
+    font-size: 12px;
+}
+.wrapper .right{
+    width: 65%;
+    background: #fff;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: 30px 25px;
+}
+.wrapper .right .info,
+.wrapper .right .projects{
+    margin-bottom: 25px;
+
+}
+.wrapper .right .info h3,
+.wrapper .right .projets h3{
+    margin-bottom: 15px;
+    padding-bottom: 5px ;
+    border-bottom: 1px solid #e0e0e0;
+    color: #353c4e;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    
+}
+.wrapper .right .info_data,
+.wrapper .right .projects_data{
+    display: flex;
+    justify-content: space-between;
+}
+.wrapper .right .info_data .data,
+.wrapper .right .projects_data .data{
+    width: 45%;
+}
+.wrapper .right .info_data .data h4,
+.wrapper .right .projects_data .data h4{
+    width: 45%;
+}
+.button {
+    background-color: #004581;
+    border: none;
+    color: white;
+    padding: 12px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    margin-left: 250px;
+    margin-top: 10px;
+    border-radius: 10px;
+  }
+/* search */
+  .searchSec {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    padding: 0.5vh 1vw;
+    position: relative;
+    justify-content: start;
+}
+
+.input-container {
+    display: -ms-flexbox;
+    /* IE10 */
+    display: flex;
+    width: 350px;
+    /*border: 0.5px solid var(--mainColor);*/
+    background-color: rgb(255, 255, 255);
+    vertical-align: middle;
+    align-items: center;
+    border-radius: 0.5rem;
+    padding-left: 0.5rem;
+}
+
+.page-title {
+    flex-grow: 1;
+    font-size: 1.3rem;
+    font-weight: 900px;
+}
+
+.icon {
+    padding: 10px;
+    min-width: 50px;
+    text-align: center;
+    color: var(--mainColor);
+}
+
+.input-field {
+    width: 100%;
+    padding: 0.5rem;
+    outline: none !important;
+    border: 0 !important;
+    border-radius: 2px;
+    background-color: rgb(255, 255, 255);
+}
+
+.btns {
+    border: 2px solid var(--mainColor);
+    color: var(--mainColor);
+    background-color: #004581;
+    text-align: center;
+    /* display: inline; */
+    cursor: pointer;
+    border-radius: .5rem;
+    padding: 0.5rem 1rem;
+    /* margin-left: 1rem; */
+    color: white;
+    font-size: 16px;
+    margin-left: 1%;
+}
+/* .button {
+    background-color: #004581;
+    border: none;
+    
+    padding: 12px 32px;
+    text-align: center;
+    text-decoration: none;
+    
+    margin: 4px 2px;
+    cursor: pointer;
+    margin-left: 250px;
+    margin-top: 10px;
+    border-radius: 10px;
+  } */
+
+.searchimage:hover {
+    background-color: var(--mainColor);
+    color: white;
+}
+.gridSearch{
+    border-radius: 0.5rem;
+    margin: 0 1vw;
+    padding: 0.2vh 1vw;
+    box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.gridSearch {
+    grid-area: search;
+}
+/* side-by-side-table */
+/* .bg {
+  margin-left:-5px;
+  margin-right:-5px;
+} */
   
-
-  color: white;
-  cursor: pointer;
-  border-radius: 8px;
-  margin-top: -15px;
-  
+.side {
+  float: left;
+  width: 50%;
+  padding: 5px;
 }
 
-.editbtn{
-  
-  position: absolute;
-width: 130px;
-height: 33px;
-left: 70%;
-vertical-align: middle;
-
-background: #D9D9D9;
-border-radius: 8px;
-font-family: 'Arvo', serif;
-font-family: 'Days One', sans-serif;
-font-style: normal;
-font-weight: 200;
-font-size: 13px;
-line-height: 20px;
-
-color: #000000;
+/* Clearfix (clear floats) */
+.bg::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+p{
+  margin:10px;
+  padding:10px;
 }
 
-.deletebtn{
-  position: absolute;
-width: 130px;
-height: 33px;
-left: 80%;
-
-
-background: #D9D9D9;
-border-radius: 8px;
-
-font-style: normal;
-font-weight: 700;
-font-size: 13px;
-line-height: 20px;
-font-family: 'Arvo', serif;
-font-family: 'Days One', sans-serif;
-color: #FF0000;
-}
-
-
-.details{
-  font-family: 'Arvo', serif;
-  font-family: 'Days One', sans-serif;
-
-}
- td{
-  margin-left: 10%;
- }
-
- .viewbtn{
-  
-  position: absolute;
-width: 130px;
-height: 33px;
-left: 60%;
-vertical-align: middle;
-
-background: #D9D9D9;
-border-radius: 8px;
-
-font-style: normal;
-font-weight: 700;
-font-size: 13px;
-line-height: 20px;
-font-family: 'Days One', sans-serif;
-color: #000000;
-}
