--- a/css/tourist.css
+++ b/css/tourist.css
@@ -101,3 +101,20 @@ div.search{
     border-radius: 4px;
     cursor: pointer;
 }
+.payhotel {
+  display: inline-block;
+   border:0;
+    position: relative;
+    padding: 0 12px;
+    height: 30px;
+    line-height: 30px;
+    background-image: -webkit-linear-gradient(#7dc5ee,#008cdd 85%,#30a2e4);
+    font-size: 14px;
+    color: #fff;
+    font-weight: bold;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
+    border-radius: 4px;
+    cursor: pointer;
+  text-decoration: none;
+}
